[package]
name = "llmcat"
version = "1.3.0"
edition = "2024"
description = "A simple CLI that transforms your code into clean, structured text for feeding into LLMs."
license = "MIT"
repository = "https://github.com/NoahCristino/llmcat"
homepage = "https://github.com/NoahCristino/llmcat"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
glob = "0.3"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
regex = "1.10"
inline_colorization = "0.1.6"
clipboard = "0.5.0"
arboard = "3.6.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
